client/components/app.scss
:root{
	--primary-color: red;
}
body{
	//required for react-motion-drawer
	overflow: hidden;
	margin: 0;
}
/* LAYOUTS */
.app{
	position: relative;
	display: inline-flex;
    flex-direction: row;
    width: 100%;
    & > div{
    	transition: width 0.7s ease-out;
    }
	.main{
		text-align: center;
	    width: 90%;
    	margin: 0 auto;
    	padding-top: 30px;
	}
	.side{
		height: 100vh;
		z-index: 1000;
		display: flex;
		flex-direction:column;
		.menuContainer{
			height:  100vh;
			border:1px solid #c5c3c3;
			border-top:none;
			border-bottom:none;
			position: fixed;
			display: flex;
		    flex-direction:row;
			.menu{
			    background: white;
			    width: inherit;
			    position: fixed;
			    left:-400px;
			    overflow: auto;
			    -webkit-transition: .15s ease-in-out;
				-moz-transition: .15s ease-in-out;
				-o-transition: .15s ease-in-out;
				transition: .15s ease-in-out;	
			    &.selected{
			    	left: 0;
			    }
			    .menuInner{
			    	position: relative;
			    }
			}
			.menuOverlay{
			    width: 100%;
			    height: 100%;
			    position: fixed;
			    background: black;
		        opacity: 0.5;
			    top: 0;
			    z-index: -1;
			}
			.menuPlaceholder{
				text-align: center;
				width: 100%;
				padding:0 30px;
				.left-border{
					
				}
				.seeMore{
				    margin-top: 50px;
				    color: #2165ea;
				    font-weight: 100;
				}
			}	
		}
	}	
}


/* COMPONENTS */
.post {
	text-align: left;
    position: relative;
    margin: 1px;
    z-index: 0;
    padding: 18px;
    background: #fff;
    // border-radius: 3px;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
    color:#001d2f;
    // color: var(--primary-color);
    &:hover{
    	background:rgba(230, 230, 230, 0.1);
    }
}
.npUl{
	.blip{
		display: inline-block;
	    margin: 5px;
	    border-radius: 8px;
	    border: solid 1px #bfbfbf;
	    background: white;
	    font-weight: 400;
	    outline:none;
	    font-size:14px;
	    p {
		    margin: 8px;
	    }
	    &:hover, &.selected{
	    	// specific for domain app
    		color: #0079ff;
    		border-color:#1DA1F2;
    		// regular
	    	// border-color:#1DA1F2;
	    	// color:#1DA1F2;
	    }
	}	
}
/* Responsive */
.card{
	background: green;
}

/* UI GLOBALS */
.subaction{
	font-size: 10px;
	color:#0079ff;
	text-decoration: underline;
	padding:0 7px;
}
body {
	font-family: 'Roboto', sans-serif;
	[role=button]{
		cursor: pointer;
	}
	h4 {
		color: grey;
		font-weight: 100;
		margin: 0;
	}
	button{
	    height: 40px;
	    text-align: center;
	    width: 100%;
	    background: #0a91e4;
	    color:white;
	    border:none;
	}
	form {
		margin: 10px auto;
		padding: 0;
		& >*{
			border:0;
		    border-bottom: 1px solid #bdbdbd;
			width: 100%;
			margin: 5px 0;
			height: 30px;
			text-align: center;
			background:none;
		}
	}
}

